[gd_scene load_steps=4 format=3 uid="uid://qf2da8tt76wb"]

[ext_resource type="Theme" uid="uid://bvc652bwjujtl" path="res://theme/main_ui.tres" id="1_4gp58"]
[ext_resource type="Script" path="res://menu/AudioSettingsMenu.gd" id="2_dwktw"]
[ext_resource type="Script" path="res://menu/CustomMenuHSlider.gd" id="2_yvnsc"]

[node name="GeneralSettingsContainer" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_4gp58")
script = ExtResource("2_dwktw")
metadata/_edit_vertical_guides_ = [640.0, 320.0, 960.0]
metadata/_edit_horizontal_guides_ = [360.0]

[node name="MarginContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 322.0
offset_top = 214.0
offset_right = 961.0
offset_bottom = 507.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OverallLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Global Volume"
vertical_alignment = 1
autowrap_mode = 2

[node name="OverallVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
script = ExtResource("2_yvnsc")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "SFX Volume"
vertical_alignment = 1
autowrap_mode = 2

[node name="SfxVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
script = ExtResource("2_yvnsc")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Music Volume"
vertical_alignment = 1
autowrap_mode = 2

[node name="MusicVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
script = ExtResource("2_yvnsc")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Replay Tutorials?"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RelaxTutorial" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4gp58")
theme_type_variation = &"NonUnderlinedButton"
text = "Relax"

[node name="StruggleTutorial" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NonUnderlinedButton"
text = "Struggle"

[node name="GalleryTutorial" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NonUnderlinedButton"
text = "Gallery"
